# simpleS3

./: Cargo.toml  Dockerfile  LICENSE  readme.md
src/: main.rs
