[package]
name = "simpleS3"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
tokio = { version = "1.0", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["cors", "fs"] }
serde = { version = "1.0", features = ["derive"] }
serde-xml-rs = "0.8.1"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.11.0-rc.0"
hex = "0.4"
base64 = "0.22"
mime_guess = "2.0"
clap = { version = "4.0", features = ["derive", "env"] }
tracing = "0.1"
tracing-subscriber = "0.3"
hmac = "0.13.0-rc.0"
url = "2.5"
